fix overflow

--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -165,11 +165,11 @@ mark{
 }
 
 .hero .shadow {
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
     background-color: #532d1a;
     position: absolute;
-    filter: blur(150px);
+    filter: blur(100px);
     z-index: 0;
     overflow: hidden;
 }
